- Fixing css issue causing element overlapping. - incrementing hot fix version

--- a/css/wolfnet.less
+++ b/css/wolfnet.less
@@ -456,11 +456,9 @@
 		text-align: left;
 		margin:     0 auto 0 auto;
 		position:   relative;
-		left:       50%;
 		
 		.wolfnet_listing
 		{
-			left:       -50%;
 			height:     @propertyHeight;
 			text-align: left;
 			position:   relative;
